# ivhd-cuda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  constants.h  cpu.cpp  data.cpp  data.h  distance.h  draw.py  from_ivta.cpp  from_ivta.cu  from_ivta.h  ivhd.cu  ivhd.h  knn_metric.py  knn_parser.cpp  knn_parser.h  main.cu  plot_error.py  png.py
include/: caster.h  caster_ab.h  constants.h  cuda_caster.h  data.h  distance.h  distance_container.h
include/caster/: caster.h  caster_ab.h  caster_adadelta_async.h  caster_adadelta_sync.h  caster_cpu.h  caster_cuda.h  caster_cuda_ab.h  caster_cuda_adadelta.h  caster_cuda_adam.h  caster_cuda_nesterov.h  caster_nesterov.h
src/: CMakeLists.txt  caster.cu  caster_ab.cu  cuda_caster.cu  data.cpp  knn_parser.cpp  main.cpp
src/caster/: caster_ab.cpp  caster_adadelta_async.cpp  caster_adadelta_sync.cpp  caster_cuda.cu  caster_cuda_ab.cu  caster_cuda_adadelta.cu  caster_cuda_adam.cu  caster_cuda_nesterov.cu  caster_nesterov.cpp
